# amcl_cuda

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
docs/: particle_filter.drawio
include/: cuda_safety.hpp  gpu_lidar_2d.hpp  pf.hpp  pf_config.hpp  pf_types.hpp  robot.hpp  stb_image.h
src/: gpu_lidar_2d.cpp  gpu_lidar_kernels.cu  main.cpp  pf.cpp  pf_kernels.cu  robot.cpp
